[gd_scene load_steps=13 format=3 uid="uid://bf2pkswfpqcl7"]

[ext_resource type="Script" path="res://objects/chest.gd" id="1_o67mv"]
[ext_resource type="Texture2D" uid="uid://lv6fuun6wse3" path="res://assets/Chest/Treasure Chest/SpriteSheet/Open & Close.png" id="2_ie426"]
[ext_resource type="AudioStream" uid="uid://dsfjki42f7q2u" path="res://assets/Sounds/RPG Sound Pack/world/door.wav" id="3_roj6x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0uw1p"]
atlas = ExtResource("2_ie426")
region = Rect2(192, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uxb2"]
atlas = ExtResource("2_ie426")
region = Rect2(208, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii3ta"]
atlas = ExtResource("2_ie426")
region = Rect2(224, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_13mhp"]
atlas = ExtResource("2_ie426")
region = Rect2(240, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w17i7"]
atlas = ExtResource("2_ie426")
region = Rect2(256, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_siii1"]
atlas = ExtResource("2_ie426")
region = Rect2(272, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yrpjt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uw1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uxb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii3ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13mhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w17i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siii1")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cp58"]
size = Vector2(13.5, 14.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_n3rsk"]
radius = 17.976

[node name="Chest" type="StaticBody2D"]
position = Vector2(19.0298, 10.4566)
rotation = -1.5708
collision_layer = 4
script = ExtResource("1_o67mv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, 8)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_yrpjt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0.25, 8.25)
shape = SubResource("RectangleShape2D_3cp58")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_n3rsk")

[node name="Opening_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_roj6x")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
